<resources>
    <string name="app_name">Budget App</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="incomes">Ingresos</string>
    <string name="expenses">Egresos</string>
    <string name="delete">Eliminar</string>
    <string name="incomesAndExpenses">Ingresos y Egresos</string>
    <string name="income">Ingreso</string>
    <string name="expense">Egreso</string>
    <string name="edit_value">Editar Valor</string>
    <string name="error_empty_fields">Todos los campos deben ser rellenados</string>
    <string name="value_updated">Valor actualizado correctamente</string>
    <string name="error_value_updated">Error actualizando el valor</string>
    <string name="error_digits_only">El campo de valor debe ser numerico</string>
    <string name="incomesAndExpensesEmpty">No tienes ingresos ni egresos, agrega uno!</string>
    <string name="category">Categoria</string>
    <string name="budget">Presupuesto</string>
    <string name="budget_upper">PRESUPUESTO</string>
    <string name="budget_dialog_description">Escribe a continuacion cuanto es lo maximo que puedes gastarte por cada categoria</string>
    <string name="add_category">Agregar categoria</string>
    <string name="name">Nombre</string>
    <string name="new_category">Nueva categoria</string>
    <string name="error_inserting_category">Error creando categoria, intentalo de nuevo.</string>
    <string name="error_deleting_category">Error eliminando la categoria, intentalo de nuevo.</string>
    <string name="error_updating_category">Error actualizando categoria, intentalo de nuevo</string>
    <string name="warning_expense_limit">Este gasto esta superando tu presupuesto en esta categoria, estas seguro?</string>
    <string name="incomes_upper">INGRESOS</string>
    <string name="expenses_upper">GASTOS</string>
    <string name="new_expense">Nuevo gasto</string>
    <string name="value">Valor</string>
    <string name="date">Fecha</string>
    <string name="invoice">Factura</string>
    <string name="takephoto">Tomar foto</string>
    <string name="transactions">Transacciones</string>
    <string name="budget_desc">Escribe a continuacion cuanto es lo maximo que puedes gastarte por cada categoria</string>
    <string name="edit_category">Editar categoria</string>
    <string name="percentage">Porcentaje</string>
    <string name="income_percentage_question">¿Porcentaje de ingresos?</string>

    <string-array name="value_type">
        <item>Ingreso</item>
        <item>Gasto</item>
    </string-array>
</resources>